<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.lpnu.android.MainActivity">

    <LinearLayout
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/phoneCall"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:inputType="phone"
                android:paddingRight="10dp" />

            <ImageView
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/search_icon"
                android:src="@android:drawable/stat_sys_phone_call" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonbar_height"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete"
                android:text="@string/button1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/edite"
                android:text="@string/button2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/add"
                android:text="@string/button3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?android:colorBackground"
        >

        <!--android:background="@android:color/background_dark"-->

        <TextView
            android:id="@+id/contactSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/items_horizontal_margin"
            android:text="@string/moreinfoheader"
            android:textSize="@dimen/header_text_size"
            />
        <TextView
            android:id="@+id/contactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/items_horizontal_margin"
            android:text="@string/moreinfoheader"
            android:textSize="@dimen/header_text_size"
            />

        <TextView
            android:id="@+id/contactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/items_horizontal_margin"
            android:text="@string/moreinfo"
            />
        <ImageView
            android:id="@+id/contactImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/items_horizontal_margin"
            android:text="@string/moreinfo"
            />

    </LinearLayout>

</FrameLayout>
