<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ua.lpnu.android.AddActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/in_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterMaxLength="25"
        app:errorTextAppearance="@style/MyErrorText">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:theme="@style/MyEditText" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/in_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterMaxLength="25"
        app:errorTextAppearance="@style/MyErrorText">

        <EditText
            android:id="@+id/edtSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_surname"
            android:theme="@style/MyEditText" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:inputType="phone" />

        <Button
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:text=". . ."
            android:onClick="onClickChoose"
            android:textColor="@android:color/holo_blue_light" />

    </LinearLayout>
    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/add"
        android:layout_width="120dp"
        android:layout_height="60dp"
android:background="@android:color/holo_blue_light"
        android:textColor="#ffff"
        android:layout_gravity="end"
        android:onClick="onAdd"

        android:text="@string/add" />


</LinearLayout>
